BCAPP-6579 : Fixed gap issue

--- a/src/components/v2/input/textField/TextField.module.css
+++ b/src/components/v2/input/textField/TextField.module.css
@@ -34,13 +34,13 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 8px;
 }
 .root label .labelRow {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 8px;
 }
 .root label .labelRow .required::after {
   content: " *";
@@ -90,6 +90,7 @@
   position: relative;
   padding: 10px 16px;
   border: 1px solid #828282;
+  margin-bottom: 4px;
   transition: background-color 110ms cubic-bezier(0.2, 0, 0.38, 0.9), border-color 110ms cubic-bezier(0.2, 0, 0.38, 0.9), box-shadow 110ms cubic-bezier(0.2, 0, 0.38, 0.9), opacity 150ms cubic-bezier(0.2, 0, 0.38, 0.9);
 }
 .root label .input-wrapper:focus-within {
